# ironflow-rs

./: .dockerignore  .env.example  ARCHITECTURE.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.alpine  Dockerfile.distroless  LOGGING.md  QUICKSTART.md  README.md  config.example.toml  docker-compose.yml
examples/: send_task.py
src/: main.rs
src/application/: mod.rs  task_processor.rs  worker.rs
src/domain/entities/: file_event.rs  mod.rs  task.rs  task_result.rs
src/domain/repositories/: mod.rs  queue_repository.rs  secret_repository.rs
src/domain/services/: command_executor.rs  file_transfer.rs  file_watcher.rs  mod.rs
src/domain/value_objects/: config.rs
src/infrastructure/: mod.rs
src/infrastructure/logging/: mod.rs  standard_log.rs
src/infrastructure/queues/: mod.rs  rabbitmq_queue.rs  redis_queue.rs
src/infrastructure/secrets/: aws_secret.rs  azure_secret.rs  mod.rs  vault_secret.rs
src/infrastructure/services/: command_executor_impl.rs  file_transfer_impl.rs  file_watcher_impl.rs  mod.rs
