[package]
name = "ironflow-rs"
version = "0.1.0"
edition = "2021"
authors = ["IronFlow Team"]
description = "A Rust-based Celery-like worker agent with clean architecture"
license = "MIT"

[dependencies]
pretty_env_logger = "0.5"
log = "0.4"
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.83"

# Queue support
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
lapin = "3.7"  # RabbitMQ client

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "8.2"

# Command execution
tokio-process = "0.2"

# File transfer
opendal = { version = "0.55", features = ["services-fs", "services-s3", "services-azblob", "services-sftp"] }
ssh2 = "0.9"

# Secret management
vaultrs = "0.7"  # HashiCorp Vault
aws-config = "1.5"
aws-sdk-secretsmanager = "1.52"
azure_security_keyvault = "0.20"
azure_identity = "0.20"
azure_core = "0.20"

# Configuration
config = "0.15"
dotenv = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# HTTP client for callbacks
reqwest = { version = "0.12", features = ["json"] }

# Utilities
futures = "0.3"
once_cell = "1.20"
regex = "1.11"

[dev-dependencies]
mockall = "0.14"
tokio-test = "0.4"
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
